Added a mock api server

--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "JavaScript development environment Pluralsight course",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel open:src lint:watch",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch start-mockapi",
     "open:src": "babel-node buildScripts/srcServer.js",
     "lint": "esw webpack.config.* src buildScripts",
     "lint:watch": "npm run lint -- --watch",
     "localtunnel": "lt --port 8000",
     "share": "npm-run-all --parallel open:src localtunnel",
-    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\""
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch",
+    "generate-mock-data": "babel-node buildScripts/generateMockData",
+    "prestart-mockapi": "npm run generate-mock-data",
+    "start-mockapi": "json-server --watch src/api/db.json --port 8001"
   },
   "author": "Michael Akinsuroju",
   "license": "MIT",
   "dependencies": {
     "@babel/register": "^7.4.4",
+    "faker": "^4.1.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
