--- a/package.json
+++ b/package.json
@@ -14,13 +14,21 @@
     "test:watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node buildScripts/generateMockData",
     "prestart-mockapi": "npm run generate-mock-data",
-    "start-mockapi": "json-server --watch src/api/db.json --port 8001"
+    "start-mockapi": "json-server --watch src/api/db.json --port 8001",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist test lint",
+    "build": "babel-node buildScripts/build.js",
+    "postbuild": "babel-node buildScripts/distServer.js",
+    "deploy": "surge ./dist"
   },
   "author": "Michael Akinsuroju",
   "license": "MIT",
   "dependencies": {
     "@babel/register": "^7.4.4",
     "faker": "^4.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "surge": "^0.21.3",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
